Lazy loaded images sit in a container to stop the blur from bleeding out

--- a/src/sass/_images.scss
+++ b/src/sass/_images.scss
@@ -1,6 +1,10 @@
 .image-container {
     overflow: hidden;
-    max-width: 100%;
+    width: 100%;
+
+    img {
+        width: 100%;
+    }
 }
 
 .lazyloading {
